target/rls/debug/build/eyre-02761295597c8dec/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Volumes/Data/Cosmos/croncat-rs/target/rls/debug/build/eyre-02761295597c8dec/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
